fix(home): nudge CapCut logo down 0.06em and add left margin for alignment

--- a/src/components/home-comps/showcase/index.module.less
+++ b/src/components/home-comps/showcase/index.module.less
@@ -80,7 +80,8 @@
     height: 0.9em;
     width: auto;
     position: relative;
-    top: -0.02em;
+    top: 0.06em;
+    margin-left: 0.1em;
   }
 
   .logo-and {
